--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aws-amplify": "^6.6.4",
     "dayjs": "^1.11.13",
     "jotai": "^2.11.0",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
